Section 9 is complited

--- a/06-WebContentStructure/AI.html
+++ b/06-WebContentStructure/AI.html
@@ -15,6 +15,7 @@
         requiring human intelligence. These tasks include
         problem-solving, understanding natural language,
         recognizing patterns, and making decisions.</p>
+        <img src="AI image.jpg" alt="AI">
     <p>AI is a broad field that encompasses various subfields
         and techniques, such as machine learning, natural
         language processing, robotics, and computer vision.</p>
@@ -53,6 +54,7 @@
         recommend products or shows based on your previous
         interactions. AI enables self-driving cars to navigate
         roads and make driving decisions.</p>
+        <img src="Alexa.jpg" alt="Amazon Alexa voice assistant">
 
         <table border="1">
             <tr>
@@ -62,7 +64,13 @@
                 <td>Natural Language Processing</td><td>Chatbots</td><td>ChatGPT</td><td>Improves customer service efficiency</td>
             </tr>
             <tr>
-                <td>Computer Vision</td><td>Healthcare</td><td>Medical Imaging</td>
+                <td>Computer Vision</td><td>Healthcare</td><td>Medical Imaging</td><td>Enhances diagnostic accuracy</td>
+            </tr>
+            <tr>
+                <td>Machine Learning</td><td>Finance</td><td>Fraud Detection</td><td>Reduces financial losses</td>
+            </tr>
+            <tr>
+                <td>Reinforcement Learning</td><td>Robotics</td><td>Autonomous Vehicles</td><td>Enables self-driving technology</td>
             </tr>
         </table>
 
@@ -78,5 +86,15 @@
     <p><a href="https://en.wikipedia.org/wiki/Artificial_intelligence">Artificial Intelligence (AI)</a></p>
     <p><a href="https://en.wikipedia.org/wiki/Natural_language_processing">natural language processing</a></p>
     <p><a href="https://pl.wikipedia.org/wiki/Siri">Siri</a></p>
+
+    <h2>Survey</h2>
+    <p>Here is a <a href="http://127.0.0.1:5500/06-WebContentStructure/survey.html">survey</a> about your knowledge
+        of issues related to artificial
+        intelligence. The survey is anonymous.
+        Please fill out the survey. The survey
+        results will be helpful in examining
+        the degree of use of artificial
+        intelligence in different age groups.</p>
+    <p></p>
 </body>
 </html>
